--- a/markup/style.css
+++ b/markup/style.css
@@ -3,7 +3,7 @@ body {
     font-family:'Poppins', sans-serif;
     overflow:hidden;
     
-    cursor: url("../assets/icons/cursor.png");
+    cursor: url("../assets/icons/clicker.png");
 }
 
 .image_center{
